# AGLThing

./: .gitignore  Makefile.am  README.md  bootstrap  configure.ac
src/: Camera.hpp  GLThing.cpp  GLThing.hpp  Makefile.am  Node.hpp  Renderer.cpp  Renderer.hpp  glThing.cpp  main.cpp
src/res/: glthing.gresource.xml.in
src/res/gtk/: menus.ui
src/res/shader/: main.glslf  main.glslg  main.glslv
src/res/ui/: about.ui  glthing.ui  headerbar.ui  main.ui
